# EvalMaxSAT

./: .gitignore  CMakeLists.txt  EvalMaxSATConfig.cmake.in  flake.nix
.github/workflows/: cmake-multi-platform.yml
lib/EvalMaxSAT/: CMakeLists.txt  merge_cadical.sh
lib/EvalMaxSAT/src/: EvalMaxSAT.h  cadicalinterface.cpp  cadicalinterface.h  cardincremental.h  glucoseinterface.h  lazyvariable.h  mcqd.h  utile.h
lib/MaLib/: CMakeLists.txt
lib/MaLib/src/: Chrono.h  coutUtil.h
lib/cadical/: CMakeLists.txt
lib/cadical/src/: arena.cpp  arena.hpp  assume.cpp  averages.hpp  cadical.hpp  ccadical.cpp  ccadical.h  checker.hpp  clause.hpp  condition.cpp  config.cpp  constrain.cpp  contract.cpp  decompose.cpp  elim.hpp  ema.cpp  extend.cpp  external.cpp  file.cpp  flags.cpp  format.cpp  format.hpp  internal.hpp  ipasir.h  limit.cpp  logging.cpp  message.cpp  parse.cpp  parse.hpp  phases.hpp  profile.cpp  proof.cpp  queue.cpp  random.cpp  range.hpp  reluctant.hpp  resources.cpp  restart.cpp  score.hpp  shrink.cpp  (+7 more)
lib/evalmax_cadical/: CMakeLists.txt
lib/evalmax_cadical/src/: analyze.cpp  averages.cpp  backtrack.cpp  backward.cpp  bins.cpp  bins.hpp  block.cpp  block.hpp  cadical.cpp  checker.cpp  clause.cpp  collect.cpp  compact.cpp  config.hpp  contract.hpp  cover.cpp  decide.cpp  deduplicate.cpp  elim.cpp  ema.hpp  external.hpp  file.hpp  flags.hpp  gates.cpp  heap.hpp  instantiate.cpp  instantiate.hpp  internal.cpp  ipasir.cpp  level.hpp  limit.hpp  logging.hpp  lookahead.cpp  lucky.cpp  minimize.cpp  mobical.cpp  observer.hpp  occs.cpp  occs.hpp  options.cpp  (+32 more)
main/: CMakeLists.txt
scripts/: build_debug.sh  build_norm.sh  build_release.sh  build_static.sh
